<package>
  <name>controller_common</name>
  <version>0.1.1</version>
  <license>BSD</license>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>
  <description>
    Package description.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build deps are queried automatically with orocos_use_package() -->
  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>cartesian_trajectory_msgs</build_depend>
  <build_depend>trapezoid_trajectory_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>liborocos-kdl-dev</build_depend>
  <build_depend>fabric_logger</build_depend>
  

  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>fabric_logger</run_depend>

  <!--<build_export_depend>liborocos-kdl-dev</build_export_depend>-->
  <run_depend>liborocos-kdl</run_depend>

  <!-- ROS Msg Typekits and Srv Proxies -->
  <build_depend>rtt_sensor_msgs</build_depend>
  <run_depend>rtt_sensor_msgs</run_depend>

  <export>
    <rtt_ros>
      <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
      <plugin_depend>rtt_sensor_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
